flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-app
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: mi-app
  template:
    metadata:
      labels:
        app: mi-app
    spec:
      containers:
      - name: mi-app-contenedor
        image: fortinux/flask:latest
        ports:
          containerPort: 5000
---
apiVersion: v1 
kind: Service
metadata: 
  name: mi-app-servicio
spec:
  selector:
    app: mi-app
  ports:
  - name: http 
    protocol: TCP  
    port: 80 
    targetPort: 5000
  type: LoadBalancer
