mi-cluster-ip.yaml
# fichero mi-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-servicio
spec:
  selector:
    app: mi-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
