nginx.yaml
# fichero nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx101
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx101
  template:
    metadata:
      labels:
        app: nginx101
    spec:
      containers:
      - name: nginx-contenedor101
        image: nginx:latest
        ports:
        - containerPort: 80
---
# este servicio expone el contenedor al exterior  
apiVersion: v1
kind: Service
metadata:
  name: nginx101
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: nginx101
