nginx007.yaml
# Ejercicio 32
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ejemplo-statefulset
spec:
  serviceName: "nginx"
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: nginx
        volumeMounts:
        - name: ejemplo-volumen
          mountPath: /usr/shar/nginx/html
  volumeClaimTemplates:
  metadata:
    name: ejemplo-volumen
  spec:  
    accessModes: [ "ReadWriteOnce" ]
    resources:
      requests:
        storage: 1Gi
---
apiVersion: v1 
kind: Service
metadata:
  name: ejemplo-service
spec: 
  type: NodePort 
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 5000
