troubleshooting002.yaml
apiVersion: v1 
kind: Service
metadata:
  name: webserver
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: webserver
