ingress001.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-minimo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ejemplo-nginx
  rules:
  - httpd: 
      paths:
      - path: /testPath
        pathType: Prefix
        backend:
          service: 
            name: test 
            port: 
              number: 80
